2008-08-24  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (open_script):
	script name now "AKFAvatar" + proper error handling

	* avatarsay.c (say_line):
	new function - handles underlining

	* avatarsay.c (process_new_line):
	function removed - handled now in say_line

	* avatarsay.c (say_line):
	handle troff style underlining and bold printing

	* avatar.c (avt_say, avt_say_len):
	don't handle backspace tricks here (avatarsay does now)

	* avatarsay.c (process_script):
	a stripline may start the text (ie. empty lines after that count)

2008-08-19  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_change_avatar_image):
	new function

	* avatarsay:
	handle changing the avatar-image in scripts

	* avatarsay.c:
	support for archive files (ar)

2008-08-15  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.15.2 released

2008-08-13  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c:
	set the default background color right at the start

	* Makefile.in:
	use $(srcdir) in every rule
	(more portable than relying on VPATH and $<)

	* configure:
	options get quoted in the generated file config.status 
	(fixes bug #23781)

2008-08-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c:
	restore background-color after playing a demo

	* avatar.c (avt_set_background_color):
	update the whole screen again after drawing the balloon

2008-08-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (execute_process):
	change settings of terminal before forking

	* avatarsay.c (process_subprogram):
	avoid checking the encoding (fixes bug with short prompts)

2008-08-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (windowmode_size):
	new variable
	save size of window for switching back from fullscreen mode

2008-08-09  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h (avt_toggle_fullscreen):
	newly exported

	* avatarsay.c (menu):
	toggle fullscreen in menu

	* avatarsay.c (initialize_start_dir):